@startuml
skinparam ranksep 30
skinparam packageTitleAlignment left
skinparam layout newpage

package "ns3::aodvv2" {
    class RreqHeader<T> {
        + RreqHeader(T origIp, uint16_t origMask, T targIp, uint1616 targMask, uint16_t seqNo, uint8_t hopLimit, uint8_t metricType, uint8_t origMetric)
        + RreqHeader(PbbPacket tlvHeader)
        + static TypeId GetTypeId()
        + void CreateTlvHeader() const
        + void SetTlvHeader(PbbPacket tlvHeader)
        + TypeId GetInstanceTypeId() const
        + uint32_t GetSerializedSize() const
        + void Serialize(Buffer::Iterator start) const
        + uint32_t Deserialize(Buffer::Iterator start)
        + void Print(std::ostream& os) const
        + void SetRtrIp(T ip)
        + T GetRtrIp() const
        + void SetRtrMask(uint16_t mask)
        + uint16_t GetRtrMask() const
        + void SetOrigIp(T ip)
        + T GetOrigIp() const
        + void SetOrigMask(uint16_t mask)
        + uint16_t GetOrigMask() const
        + void SetOrigSeqNo(uint16_t seq)
        + uint16_t GetOrigSeqNo() const
        + void SetTargIp(T ip)
        + T GetTargIp() const
        + void SetTargMask(uint16_t mask)
        + uint16_t GetTargMask() const
        + void SetMetricType(uint8_t type)
        + uint8_t GetMetricType() const
        + void SetOrigMetric(uint8_t metric)
        + uint8_t GetOrigMetric() const
        + void SetTargSeqNo(uint16_t seq)
        + uint16_t GetTargSeqNo() const
        + void SetSeqNo(uint16_t seq)
        + uint16_t GetSeqNo() const
        + void SetHopLimit(uint8_t count)
        + uint8_t GetHopLimit() const
        + void SetSendTargSeqNum(bool send)
        + bool GetSendTargSeqNum() const
        + bool operator==(const RreqHeader& o) const
    }

    class RrepHeader<T> {
        + RrepHeader(T origIp, uint16_t origMask, T targIp, uint16_t targMask, uint1616 seqNo, uint8_t hopLimit, uint8_t metricType, uint8_t targMetric)
        + RrepHeader(PbbPacket tlvHeader)
        + static TypeId GetTypeId()
        + void CreateTlvHeader() const
        + void SetTlvHeader(PbbPacket tlvHeader)
        + TypeId GetInstanceTypeId() const
        + uint32_t GetSerializedSize() const
        + void Serialize(Buffer::Iterator start) const
        + uint32_t Deserialize(Buffer::Iterator start)
        + void Print(std::ostream& os) const
        + void SetOrigIp(T ip)
        + T GetOrigIp() const
        + void SetOrigMask(uint16_t mask)
        + uint16_t GetOrigMask() const
        + void SetTargIp(T ip)
        + T GetTargIp() const
        + void SetTargMask(uint16_t mask)
        + uint16_t GetTargMask() const
        + void SetTargSeqNo(uint16_t seq)
        + uint16_t GetTargSeqNo() const
        + void SetMetricType(uint8_t type)
        + uint8_t GetMetricType() const
        + void SetTargMetric(uint8_t metric)
        + uint8_t GetTargMetric() const
        + void SetSeqNo(uint16_t seq)
        + uint16_t GetSeqNo() const
        + void SetHopLimit(uint8_t count)
        + uint8_t GetHopLimit() const
        + bool operator==(const RrepHeader& o) const
    }

    class RrepAckHeader<T> {
        + RrepAckHeader()
        + static TypeId GetTypeId()
        + void CreateTlvHeader() const
        + void SetTlvHeader(PbbPacket tlvHeader)
        + TypeId GetInstanceTypeId() const
        + uint32_t GetSerializedSize() const
        + void Serialize(Buffer::Iterator start) const
        + uint32_t Deserialize(Buffer::Iterator start)
        + void Print(std::ostream& os) const
        + void SetSeqNo(uint16_t seq)
        + uint16_t GetSeqNo() const
        + bool operator==(const RrepAckHeader& o) const
    }

    class RerrHeader<T> {
        + RerrHeader()
        + RerrHeader(PbbPacket tlvHeader)
        + static TypeId GetTypeId()
        + void CreateTlvHeader() const
        + void SetTlvHeader(PbbPacket tlvHeader)
        + TypeId GetInstanceTypeId() const
        + uint32_t GetSerializedSize() const
        + void Serialize(Buffer::Iterator i) const
        + uint32_t Deserialize(Buffer::Iterator start)
        + void Print(std::ostream& os) const
        + void SetOrigIp(T ip)
        + T GetOrigIp() const
        + void SetOrigMask(uint16_t mask)
        + uint16_t GetOrigMask() const
        + bool AddUnDestination(T dst, uint1616 seqNo, uint8_t metricType = AODVV2_METRIC_UNASSIGNED)
        + bool RemoveUnDestination(std::pair<T, UnreachableDst>& un)
        + void Clear()
        + uint8_t GetDestCount() const
        + bool operator==(const RerrHeader& o) const
    }

    enum MessageType {
        AODVV2_TYPE_RREQ = 10
        AODVV2_TYPE_RREP = 11
        AODVV2_TYPE_RERR = 12
        AODVV2_TYPE_RREP_ACK = 13
    }

    enum MessageTlvType {
        AODVV2_ACK_REQ = 128
    }

    enum AddressTlvType {
        AODVV2_PATH_METRIC = 129
        AODVV2_SEQ_NUM = 130
        AODVV2_ADDRESS_TYPE = 131
    }

    enum AddressTlvValue {
        AODVV2_ORIGPREFIX = 0
        AODVV2_TARGPREFIX = 1
        AODVV2_UNREACHABLE = 2
        AODVV2_PKTSOURCE = 3
    }

    enum AddressTlvMetricType {
        AODVV2_METRIC_UNASSIGNED = 0
        AODVV2_METRIC_HOP = 1
    }

    RreqHeader ..> PbbPacket : uses
    RrepHeader ..> PbbPacket : uses
    RrepAckHeader ..> PbbPacket : uses
    RerrHeader ..> PbbPacket : uses
}

@enduml